force-app/main/default/objects/Material_Requisition__c/Material_Requisition__c.object-meta.xml
<CustomObject>
    <label>Material Requisition</label>
    <nameField>
        <label>Material Requisition Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Material Requisitions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>