force-app/main/default/objects/Material_Requisition__c/fields/ATI_Job__c.field-meta.xml
<CustomField>
    <fullName>ATI_Job__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>ATI Job</label>
    <referenceTo>ATI_Job__c</referenceTo>
    <relationshipLabel>Material Requisitions</relationshipLabel>
    <relationshipName>Material_Requisitions</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>