force-app/main/default/objects/Material_Requisition__c/fields/Batch_Date__c.field-meta.xml
<CustomField>
    <fullName>Batch_Date__c</fullName>
    <label>Batch Sync Date</label>
    <type>DateTime</type>
</CustomField>