force-app/main/default/objects/Material_Requisition__c/fields/Batch_Value__c.field-meta.xml
<CustomField>
    <fullName>Batch_Value__c</fullName>
    <label>Batch Value</label>
    <summarizedField>Material_Requisition_line_item__c.Issue_Value__c</summarizedField>
    <summaryForeignKey>Material_Requisition_line_item__c.Material_Requisition__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>