force-app/main/default/objects/Material_Requisition__c/fields/Debit_Accounts__c.field-meta.xml
<CustomField>
    <fullName>Debit_Accounts__c</fullName>
    <formula>SUBSTITUTE( ATI_Job__r.GL_Account_Prefix__c ,&quot;-&quot;, &quot;&quot;) + &apos;5200&apos;</formula>
    <label>Debit Accounts</label>
    <type>Text</type>
</CustomField>