force-app/main/default/objects/Material_Requisition__c/fields/Job__c.field-meta.xml
<CustomField>
    <fullName>Job__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Job</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Material Requisitions</relationshipLabel>
    <relationshipName>Material_Requisitions</relationshipName>
    <type>Lookup</type>
</CustomField>