force-app/main/default/objects/Material_Requisition__c/fields/Job_Number__c.field-meta.xml
<CustomField>
    <fullName>Job_Number__c</fullName>
    <formula>SUBSTITUTE(ATI_Job__r.Job_Number__c,&quot;-&quot;, &quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Job Number</label>
    <type>Text</type>
</CustomField>