force-app/main/default/objects/Material_Requisition__c/fields/Job_Project_Manager_Email__c.field-meta.xml
<CustomField>
    <fullName>Job_Project_Manager_Email__c</fullName>
    <label>Job Project Manager Email</label>
    <type>Email</type>
</CustomField>