force-app/main/default/objects/Material_Requisition__c/fields/Location_code__c.field-meta.xml
<CustomField>
    <fullName>Location_code__c</fullName>
    <formula>LocationCode__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Location code</label>
    <type>Text</type>
</CustomField>