force-app/main/default/objects/Material_Requisition__c/fields/Location_text__c.field-meta.xml
<CustomField>
    <fullName>Location_text__c</fullName>
    <formula>LocationCode__r.Description__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Location text</label>
    <type>Text</type>
</CustomField>