force-app/main/default/objects/Material_Requisition__c/fields/LocationCode__c.field-meta.xml
<CustomField>
    <fullName>LocationCode__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Location Code</label>
    <referenceTo>Location_Code__c</referenceTo>
    <relationshipLabel>Material Requisitions</relationshipLabel>
    <relationshipName>Material_Requisitions</relationshipName>
    <type>Lookup</type>
</CustomField>