force-app/main/default/objects/Material_Requisition__c/fields/MR_Auto_Number__c.field-meta.xml
<CustomField>
    <fullName>MR_Auto_Number__c</fullName>
    <label>MR Auto Number</label>
    <type>AutoNumber</type>
</CustomField>