force-app/main/default/objects/Material_Requisition__c/fields/MR_Total_Cost__c.field-meta.xml
<CustomField>
    <fullName>MR_Total_Cost__c</fullName>
    <formula>Batch_Value__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>MR Total Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>