force-app/main/default/objects/Material_Requisition__c/fields/No_of_Entries__c.field-meta.xml
<CustomField>
    <fullName>No_of_Entries__c</fullName>
    <label>No of Entries</label>
    <summaryForeignKey>Material_Requisition_line_item__c.Material_Requisition__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>