force-app/main/default/objects/Material_Requisition__c/validationRules/Cant_be_changed_to_Completed_From_sync.validationRule-meta.xml
<ValidationRule>
    <fullName>Cant_be_changed_to_Completed_From_sync</fullName>
    <active>true</active>
    <description>Can&apos;t change to completed status if the sync was in Successful or Failed.</description>
    <errorConditionFormula>ISCHANGED(Status__c) &amp;&amp; (TEXT(PRIORVALUE(Status__c)) =&quot;Sync Successful&quot; || TEXT(PRIORVALUE(Status__c)) =&quot;Sync Failed&quot;) &amp;&amp; $Profile.Name &lt;&gt; &quot;System Administrator&quot;</errorConditionFormula>
    <errorMessage>Status cannot be changed to Completed if the Material Requisition has been synced.</errorMessage>
</ValidationRule>