force-app/main/default/objects/Material_Requisition__c/validationRules/Synced_MRs_cant_be_edited.validationRule-meta.xml
<ValidationRule>
    <fullName>Synced_MRs_cant_be_edited</fullName>
    <active>true</active>
    <errorConditionFormula>ISCHANGED(Status__c) &amp;&amp; (TEXT(PRIORVALUE(Status__c)) =&quot;Sync Successful&quot; || TEXT(PRIORVALUE(Status__c)) =&quot;Sync Failed&quot;) &amp;&amp; $Profile.Name &lt;&gt; &quot;System Administrator&quot;</errorConditionFormula>
    <errorMessage>You can&apos;t edit a MR that has been synced to Timberline.</errorMessage>
</ValidationRule>