force-app/main/default/objects/Material_Requisition__c/validationRules/Test_Job_MRs_cant_be_marked_completed.validationRule-meta.xml
<ValidationRule>
    <fullName>Test_Job_MRs_cant_be_marked_completed</fullName>
    <active>true</active>
    <errorConditionFormula>ATI_Job__r.Name = &apos;000-00-00002 | Test Job 1&apos; &amp;&amp;   ISPICKVAL(Status__c,&apos;Completed&apos;)</errorConditionFormula>
    <errorMessage>Test ATI Job MRs can&apos;t be marked Completed</errorMessage>
</ValidationRule>