force-app/main/default/objects/Material_Requisition__c/listViews/Dallas_Material_Req.listView-meta.xml
<ListView>
    <fullName>Dallas_Material_Req</fullName>
    <columns>NAME</columns>
    <columns>Job__c</columns>
    <columns>Job_Number__c</columns>
    <columns>MR_Total_Cost__c</columns>
    <columns>No_of_Entries__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Location_text__c</field>
        <operation>equals</operation>
        <value>Dallas</value>
    </filters>
    <label>Dallas Material Req</label>
    <sharedTo>
        <group>Dallas</group>
    </sharedTo>
</ListView>