force-app/main/default/objects/Material_Requisition__c/listViews/San_Diego_Material_Requisitions.listView-meta.xml
<ListView>
    <fullName>San_Diego_Material_Requisitions</fullName>
    <columns>NAME</columns>
    <columns>Location_text__c</columns>
    <columns>No_of_Entries__c</columns>
    <columns>MR_Total_Cost__c</columns>
    <columns>Status__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Location_text__c</field>
        <operation>startsWith</operation>
        <value>San Diego</value>
    </filters>
    <label>San Diego Material Requisitions</label>
</ListView>